--- a/www/index.html
+++ b/www/index.html
@@ -1,26 +1,46 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Messaging Server</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Messaging Server</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="contentContainer">
-    <div class="content">
+<div class="contentContainer">
+  <div class="content">
+    <div class="page login">
       <div class="loginScreenLogo">
         <img src="https://whyevolutionistrue.files.wordpress.com/2015/02/cute-kitten-saying-hello.jpg" alt="kitten" />
       </div>
       <div class="loginScreenUserInput">
         <h1>Enter Username/Join room</h1>
-        <input class="userInput usernameInput" type="text" placeholder="Enter username" maxlength="16" />
+        <input class="userInput usernameInput" type="text" placeholder="Enter username" maxlength="16" autofocus />
         <input class="userInput roomInput" type="text" placeholder="Create/Join room" maxlength="16" />
       </div>
     </div>
+    <div class="page chat">
+      <div class="chatContainer">
+        <div class="chatHeader">
+          <span>You are in room: {{roomname}}</span>
+        </div>
+        <div class="chat">
+          <ul class="chatLog">
+            <li class="message chatMessage even"><span>Hello</span></li>
+            <li class="message consoleMessage even"><span>Hello</span></li>
+            <li class="message chatMessage odd"><span>Hi</span></li>
+            <li class="message chatMessage even"><span>Hey</span></li>
+          </ul>
+        </div>
+        <div class="messageInputDiv">
+          <input class="messageInput" type="text" placeholder="Type here" maxlength="300" />
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
