Removed placeholder rows and emptied title

--- a/www/index.html
+++ b/www/index.html
@@ -21,14 +21,10 @@
     <div class="page chat">
       <div class="chatContainer">
         <div class="chatHeader">
-          <span>You are in room: {{roomname}}</span>
+          <span></span>
         </div>
         <div class="chat">
           <ul class="chatLog">
-            <li class="message chatMessage even"><span>Hello</span></li>
-            <li class="message consoleMessage even"><span>Hello</span></li>
-            <li class="message chatMessage odd"><span>Hi</span></li>
-            <li class="message chatMessage even"><span>Hey</span></li>
           </ul>
         </div>
         <div class="messageInputDiv">
