--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="http://blueimp.github.io/JavaScript-MD5/js/md5.js"></script>
 <script src="client.js"></script>
 </body>
 </html>
