Updated log so the number of users is always at the top

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
             <span></span>
           </div>
           <ul class="chatLog">
+            <li class="message consoleMessage numUsers"><span>There is only 1 active user.</span></li>
           </ul>
           <div class="messageInputDiv">
             <input class="messageInput message" type="text" placeholder="Type here" maxlength="300" />
