Started working on the menu section, moved the top bar so it's on every page

--- a/www/index.html
+++ b/www/index.html
@@ -12,10 +12,11 @@
 <body>
 <div class="contentContainer">
   <div class="content">
+    <div class="logoTopBar">
+      <img class="companyLogo" src="Tangl.png" alt="Logo">
+      <img class="menuBars" src="Menu.png" alt="menu">
+    </div>
     <div class="page login">
-      <div class="logoTopBar">
-        <img class="companyLogo" src="Tangl.png" alt="Logo">
-      </div>
       <div class="loginBox">
         <div class="loginBoxContainer">
           <img class="companyLogo" src="Tangl.png" alt="Logo">
@@ -66,7 +67,6 @@
 
 
     <div class="page menu">
-      
     </div>
 
     <div class="page chat">
