Continued working on menu screen, trying to get gravatar profile pictures working

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,11 @@
       <img class="companyLogo" src="Tangl.png" alt="Logo">
       <img class="menuBars" src="Menu.png" alt="menu">
     </div>
+    <div id="sidebar">
+      <div class="profilePicture">
+
+      </div>
+    </div>
     <div class="page login">
       <div class="loginBox">
         <div class="loginBoxContainer">
