Added placeholder friend element

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,14 @@
       <div class="profilePicture">
 
       </div>
+      <div class="friendsListContainer">
+        <ul class="friendsList">
+        <li class="friend">
+          <img class="friendImage" src="Menu.png" alt="O">
+          <span>John Doe</span>
+        </li>
+        </ul>
+      </div>
     </div>
     <div class="page login">
       <div class="loginBox">
