--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://blueimp.github.io/JavaScript-MD5/js/md5.js"></script>
+<script src="https://cdn.jsdelivr.net/js-md5/0.3.0/md5.min.js"></script>
 <script src="client.js"></script>
 
 </body>
