Added elements and styling for sidebar
Input and button for creating/joining a room

--- a/www/index.html
+++ b/www/index.html
@@ -18,14 +18,25 @@
       <img class="menuBars" src="Menu.png" alt="menu">
     </div>
     <div id="sidebar">
-      <div class="profilePicture">
-
+      <div class="sidebarRooms">
+        <div class="createJoinRoom">
+          <input class="roomInput createJoinText" type="text" placeholder="Join/Create room" maxlength="20" autofocus="">
+          <input class="roomInput createJoinButton" type="button" value="Sign In" maxlength="16">
+        </div>
       </div>
       <div class="friendsListContainer">
         <ul class="friendsList">
         <li class="friend">
-          <img class="friendImage" src="Menu.png" alt="O">
+          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
           <span>John Doe</span>
+        </li>
+        <li class="friend">
+          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
+          <span>Jane Doe</span>
+        </li>
+        <li class="friend">
+          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
+          <span>Tony Stark</span>
         </li>
         </ul>
       </div>
@@ -81,6 +92,14 @@
 
 
     <div class="page menu">
+      <div class="menuContent">
+        <div class="chatColumn">
+
+        </div>
+        <div class="chatColumn">
+
+        </div>
+      </div>
     </div>
 
     <div class="page chat">
