--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css"/>
 
 </head>
 <body>
@@ -21,7 +22,7 @@
       <div class="sidebarRooms">
         <div class="createJoinRoom">
           <input class="roomInput createJoinText" type="text" placeholder="Join/Create room" maxlength="20" autofocus="">
-          <input class="roomInput createJoinButton" type="button" value="Sign In" maxlength="16">
+          <input class="roomInput createJoinButton" type="button" value="Join Room" maxlength="16">
         </div>
       </div>
       <div class="friendsListContainer">
@@ -93,35 +94,14 @@
 
     <div class="page menu">
       <div class="menuContent">
-        <div class="chatColumn">
-
-        </div>
-        <div class="chatColumn">
-
-        </div>
       </div>
     </div>
 
-    <div class="page chat">
-      <div class="chatContainer">
-        <div class="chat">
-          <div class="chatHeader">
-            <span></span>
-          </div>
-          <ul class="chatLog">
-            <li class="message consoleMessage numUsers"><span>There is only 1 active user.</span></li>
-          </ul>
-          <div class="messageInputDiv">
-            <input class="messageInput message" type="text" placeholder="Type here" maxlength="300" />
-            <input class="messageInput send" type="button" value=">" />
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdn.jsdelivr.net/js-md5/0.3.0/md5.min.js"></script>
 <script src="client.js"></script>
