--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
           <span>Jane Doe</span>
         </li>
         <li class="friend">
-          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
+          <img class="friendImage" src="http://icons.iconarchive.com/icons/hopstarter/iron-man-avatar/256/Iron-Man-Mark-III-01-icon.png" alt="O">
           <span>Tony Stark</span>
         </li>
         </ul>
