--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+x<!doctype html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -40,6 +40,9 @@
           <span>Tony Stark</span>
         </li>
         </ul>
+      </div>
+      <div class="userLogout">
+        <span>Logout</span>
       </div>
     </div>
     <div class="page login">
@@ -104,6 +107,7 @@
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdn.jsdelivr.net/js-md5/0.3.0/md5.min.js"></script>
+<script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
 <script src="client.js"></script>
 
 </body>
