Emptied friends list by default and added in better styling

--- a/www/index.html
+++ b/www/index.html
@@ -26,19 +26,8 @@ x<!doctype html>
         </div>
       </div>
       <div class="friendsListContainer">
+        <span>Users Logged in:</span>
         <ul class="friendsList">
-        <li class="friend">
-          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
-          <span>John Doe</span>
-        </li>
-        <li class="friend">
-          <img class="friendImage" src="http://www.networkeverafter.com/img/personplaceholder.jpg" alt="O">
-          <span>Jane Doe</span>
-        </li>
-        <li class="friend">
-          <img class="friendImage" src="http://icons.iconarchive.com/icons/hopstarter/iron-man-avatar/256/Iron-Man-Mark-III-01-icon.png" alt="O">
-          <span>Tony Stark</span>
-        </li>
         </ul>
       </div>
       <div class="userLogout">
